c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/switch_default_not_last.c
int main(void) {
    int a;
    int b = a = 7;
    switch (a + b) {
        default: return 0;
        case 2: return 1;
    }

}