c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/switch_goto_case.c
int main(void) {
    goto 3;
    switch (3) {
        case 3: return 0;
    }
}